<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuInfo"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/photo_mnuInfo"
        app:iconTint="@color/white"

        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/mnuVisible"
        android:checkable="true"
        android:title="@string/main_mnuVisible"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/mnuActions"
        android:title="@string/photo_mnuActions">
        <menu>
            <item
                android:id="@+id/mnuEdit"
                android:title="@string/photo_mnuEdit"
                app:iconTint="@color/black"
                android:icon="@drawable/ic_baseline_edit_24"/>
            <item
                android:id="@+id/mnuDelete"
                android:title="@string/photo_mnuDelete"
                app:iconTint="@color/black"
                android:icon="@drawable/ic_baseline_delete_24"/>
        </menu>

    </item>


</menu>

